tweak string on logged out publishing portal greeter

--- a/app/templates/publish/greeter.twig
+++ b/app/templates/publish/greeter.twig
@@ -11,7 +11,7 @@
 	<div class="jumbotron">
 		<div class="container">
 			<h2>{% trans %}Would you like to show the world what you built?{% endtrans %}</h2>
-			<p>{% trans %}Great! After registering you can easily publish your addons here and distribute them via Lorry.{% endtrans %}</p>
+			<p>{% trans %}Great! After registering you can create your addons here and publish them on Lorry.{% endtrans %}</p>
 			<p>
 				<a href="{{base}}/register?returnto={{origpath}}" class="btn btn-lg btn-success">{% trans %}Register now{% endtrans %}</a>
 				<a href="{{base}}/login?returnto={{origpath}}" class="btn btn-lg btn-primary">{% trans %}Login{% endtrans %}</a>
