update front page

--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -12,10 +12,10 @@
 				<div class="carousel-inner">
 					<div class="item active">
 						<a href="{{base}}/about">
-							<img src="http://placehold.it/900x500/77/00&text=Lorry" alt="Lorry">
+							<img src="{{resources}}/lorry/img/banner.png" alt="Lorry">
 						</a>
 						<div class="carousel-caption">
-							<h3><strong>This is Lorry:</strong> Welcome back to Clonk.</h3>
+							<h3><strong>{% trans %}This is Lorry{% endtrans %}</strong><br>{% trans %}Welcome back to Clonk{% endtrans %}</h3>
 						</div>
 					</div>
 					<div class="item">
@@ -23,7 +23,7 @@
 							<img src="http://placehold.it/900x500/77/00&text=CMC" alt="Codename: Modern Combat">
 						</a>
 						<div class="carousel-caption">
-							<h3>Now available: <strong>Codename: Modern Combat R1.6</strong></h3>
+							<h3><strong>Codename: Modern Combat R1.6</strong><br>{% trans %}Now available{% endtrans %}</h3>
 						</div>
 					</div>
 				</div>
