--- a/app/templates/publish/release/basic.twig
+++ b/app/templates/publish/release/basic.twig
@@ -1,6 +1,6 @@
 <form role="form" method="post" action="{{filename}}#basic">
 	{% include 'functions/alert.twig' with {'selector' : 'version'} %}
-	<input type="hidden" name="general-form">
+	<input type="hidden" name="basic-form">
 	<input type="hidden" name="state" value="{{state}}">
 	<div class="form-group">
 		<label for="title">{%trans "Addon" %}</label>
