--- a/app/templates/publish/edit/releases.twig
+++ b/app/templates/publish/edit/releases.twig
@@ -1,18 +1,19 @@
 <div class="row">
-	<div class="col-md-12">
-		<label for="version">{% trans "Plan new release" %}</label>
+	<div class="col-md-4">
+		<label for="version">{% trans "Version" %}</label>
 		<form role=form" class="form-inline" method="post" action="{{filename}}#releases">
-			<input type="hidden" name="release-form">
+			<input type="hidden" name="releases-form">
 			<input type="hidden" name="state" value="{{state}}">
 			{% include 'functions/alert.twig' with {'selector' : 'release'} %}
 			<div class="form-group">
-				<label class="sr-only" for="version	">{% trans "Version"%}</label>
+				<label class="sr-only" for="version">{% trans "Version"%}</label>
 				<input type="text" class="form-control" name="version" id="version" value="{{version}}" placeholder="1.0b"{% if focus_version %} autofocus{% endif %} required>
 			</div>
 			<button type="submit" class="btn btn-success" name="release-submit">{% trans %}Plan release{% endtrans %}</button>
 			<span class="help-block">{% trans %}Releases are invisible until you publish them.{% endtrans %}</span>
 		</form>
-		<p></p>
+	</div>
+	<div class="col-md-8">
 		<label for="type">{% trans "Releases" %}</label>
 		<div class="list-group">
 			{% for release in releases %}
