--- a/app/templates/manage/approve.twig
+++ b/app/templates/manage/approve.twig
@@ -4,6 +4,7 @@
 
 {% block content %}
 	<div class="page-header">
+		<div class="breakout"><a href="{{base}}/moderate"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></div>
 		<div class="container">
 			<h1>{{addon}}
 				<small>
@@ -44,10 +45,16 @@
 				<div class="col-md-8">
 					<form role="form" method="post" action="{{filename}}">
 						<input type="hidden" name="state" value="{{state}}">
-						{% if release %}
-							<div class="alert alert-success">{% trans %}Approving this addon will trigger a public release. The user can publish further releases of this addon without approval.{% endtrans %}</div>
-						{% else %}
-							<div class="alert alert-info">{% trans %}The user will be able to freely publish releases of this addon after approval.{% endtrans %}</div>
+						{% if not alerts.approval %}
+							{% if duplicate %}
+								<div class="alert alert-danger">{% trans %}The requested namespace has already been reserved for another addon.{% endtrans %}</div>
+							{% else%}
+								{% if release %}
+									<div class="alert alert-success">{% trans %}Approving this addon will trigger a public release. The user can publish further releases of this addon without approval.{% endtrans %}</div>
+								{% else %}
+									<div class="alert alert-info">{% trans %}The user will be able to freely publish releases of this addon after approval.{% endtrans %}</div>
+								{% endif %}
+							{% endif %}
 						{% endif %}
 						{% include 'functions/alert.twig' with {'selector' : 'approval'} %}
 						<div class="form-group">
@@ -56,7 +63,7 @@
 							{% if comment_help %}<p class="help-block">{{comment_help}}</p>{% endif %}
 						</div>
 						<p>
-							<button type="submit" class="btn btn-lg btn-success" name="approve">{% trans %}Approve{% endtrans %}</button>
+							<button type="submit" class="btn btn-lg btn-success" name="approve"{% if duplicate%} disabled{% endif %}>{% trans %}Approve{% endtrans %}</button>
 							<button type="submit" class="btn btn-lg btn-danger" name="reject">{% trans %}Reject{% endtrans %}</button>
 						</p>
 					</form>
@@ -69,8 +76,10 @@
 						<dd>{% include 'functions/user.twig' with {'user': user} %}</dd>
 						<dt>{% trans %}Requested namespace{% endtrans %}</dt>
 						<dd>{{namespace}}</dd>
+						{% if not duplicate %}
 						<dt>{% trans %}Example url{% endtrans %}</dt>
 						<dd><samp>&hellip;/addons/{{game.short}}/<strong>{{namespace}}</strong></samp></dd>
+						{% endif %}
 						<dt>{% trans %}Timestamp{% endtrans %}</dt>
 						<dd>{{timestamp}}</dd>
 					</dl>
