tweak string on game page

--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -29,7 +29,7 @@
 		<div class="container">
 			<img src="{{resources}}/custom/game/{{short}}.png" class="pull-right jumbo-image hidden-xs" alt="{% trans %}{{game}} logo{% endtrans %}">
 			<h1>{% trans %}No addons available{% endtrans %}</h1>
-			<p>{% trans %}There are no addons for this game yet :-({% endtrans %}</p>
+			<p>{% trans %}There are no addons available for this game yet.{% endtrans %}</p>
 			{% if user_login %}
 				<p>
 					<a href="{{base}}/create?for={{short}}" class="btn btn-primary btn-lg">{% trans %}New {{game}} addon{% endtrans %}</a>
