--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -58,7 +58,8 @@
 						{% endfor %}
 					</ul>
 				{% elseif self %}
-					<div class="alert alert-info">{% trans %}You have not released any addons yet.{% endtrans %} <a href="{{base}}/create">{% trans %}Why not create one now?{% endtrans %}</a></div>
+					{% set create_one_now %}<a href="{{base}}/create">{% trans %}create one now{% endtrans %}</a>{% endset %}
+					<div class="alert alert-info">{% trans %}You have not released any addons yet. Why not {{create_one_now}}?{% endtrans %}</a></div>
 				{% else %}
 					<div class="alert alert-warning">{% trans %}This user has not released any addons yet.{% endtrans %}</div>
 				{% endif %}
