tweak string in "addon rejected" info bex

--- a/app/templates/publish/edit/basic.twig
+++ b/app/templates/publish/edit/basic.twig
@@ -26,7 +26,7 @@
 		<div class="panel panel-danger">
 			<div class="panel-heading">{% trans %}Addon rejected{% endtrans %}</div>
 			<div class="panel-body">
-				<p>{% trans %}This addon was rejected. You can possibly improve the details and submit it again.{% endtrans %}</p>
+				<p>{% trans %}This addon was rejected. You can possibly improve and submit it again.{% endtrans %}</p>
 				{{approval_comment}}
 			</div>
 		</div>
