add info block to release changes page

--- a/app/templates/publish/release/changes.twig
+++ b/app/templates/publish/release/changes.twig
@@ -12,6 +12,7 @@
 			<textarea class="form-control monospace" id="changelog" name="changelog" rows="6" placeholder="{% trans %}+ Added a new feature...{% endtrans %}">{{changelog}}</textarea>
 		</div>
 	</div>
+	<p class="help-block">{% trans %}The changelogs can still be changed after the release has been published.{% endtrans %}</p>
 	<div class="form-group">
 		<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 	</div>
