--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -4,7 +4,7 @@
 	<div class="page-header">
 		<div class="breakout"><a href="{{base}}/publish"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></div>
 		<div class="container">
-			<h1><a href="#basic">{{addontitle}}</a>
+			<h1><a href="#basic">{{heading}}</a>
 				<small>
 					<span class="glyphicon glyphicon-pencil"></span>
 				</small>
