--- a/app/templates/publish/edit/presentation.twig
+++ b/app/templates/publish/edit/presentation.twig
@@ -32,8 +32,8 @@
 				<input type="url" class="form-control" name="bugtracker-url" id="bugtracker-url" value="{{bugtracker}}" placeholder="http://clonkforge.net/bugtrack.php?prj=">
 			</div>
 			<div class="form-group">
-				<label for="bugtracker-url">{%trans "Forum" %}</label>
-				<input type="url" class="form-control" name="bugtracker-url" id="bugtracker-url" value="{{bugtracker}}" placeholder="http://clonkforge.net/dforum.php?prj=">
+				<label for="forum-url">{%trans "Forum" %}</label>
+				<input type="url" class="form-control" name="forum-url" id="forum-url" value="{{forum}}" placeholder="http://clonkforge.net/dforum.php?prj=">
 			</div>
 		</div>
 	</div>
