--- a/app/templates/site/api.twig
+++ b/app/templates/site/api.twig
@@ -23,7 +23,7 @@
 		<table class="table">
 			<tr><th>{% trans %}Type{% endtrans %}</th><th>{% trans %}Structure{% endtrans %}</th></tr>
 			<tr><td>game</td><td><pre>{"id":"rage","title":"Clonk Rage"}</pre></td></tr>
-			<tr><td>addon</td><td><pre>{"id":"knights","title":"Knights","introduction":"The original knights pack."}</pre></td></tr>
+			<tr><td>addon</td><td><pre>{"id":"knights","title_en":"Knights","title_de":"Ritter"}</pre></td></tr>
 		</table>
 		<h2>{% trans %}Error handling{% endtrans %}</h2>
 		<p>{% trans %}You can handle errors by checking for the <code>error</code> field in the response.{% endtrans %} {% trans %}Additionally, a human-readable message may be given in a <code>message</code> field.{% endtrans %}</p>
