--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -7,8 +7,8 @@
 		<div class="breakout"><a href="{{base}}/publish/{{addonid}}#releases"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></div>
 		<div class="container">
 			<h1>
-				<a href="{{base}}/publish/{{addonid}}#releases">
-					{{addontitle}}
+				<a href="{{base}}/publish/{{addon.id}}#releases">
+					{{addon.title}}
 				</a>
 				<small><a href="#basic">{% include 'functions/labels/version.twig' with {'version' : version, prefix: 'Release'|trans} %}</a>
 					<a href="#publish">{% if released %}
